# defillama-answerer

./: .config.example.yaml  .dockerignore  .gitignore  .prettierrc  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
abis/: DefiLlamaOracle.json  Factory.json  KPIToken.json
migrations/2023-08-24-074840_create_active_oracles_table/: down.sql  up.sql
migrations/2023-08-25-114307_create_checkpoints_table/: down.sql  up.sql
migrations/2023-08-25-114307_create_snapshots/: up.sql
migrations/2023-10-02-135949_active_oracles_table_add_expiration_column/: down.sql  up.sql
src/: answerer.rs  api.rs  commons.rs  db.rs  defillama.rs  http_client.rs  ipfs.rs  lib.rs  listener.rs  main.rs  scanner.rs  signer.rs  specification.rs  telemetry.rs
src/api/: documentation.rs  specifications.rs
src/db/: models.rs  schema.rs
src/listener/: commons.rs
src/scanner/: commons.rs  past.rs  present.rs
src/specification/: handlers.rs
src/specification/handlers/: tvl.rs
tests/: active_oracle.rs  checkpoint.rs  specification.rs
tests/commons/: context.rs
