[package]
name = "defillama-answerer"
version = "0.8.2"
edition = "2021"

[profile.release]
debug = false
strip = true

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
backoff = { version = "0.4.0", features = ["tokio"] }
confy = { version = "0.5.1", features = [
    "yaml_conf",
], default-features = false }
diesel = { version = "2.1.3", features = ["postgres", "r2d2", "serde_json"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
ethers = { version = "2.0.10", features = ["rustls"] }
governor = "0.6.0"
mibs = "0.10.2"
reqwest = { version = "0.11.22", features = ["serde_json", "stream"] }
rust_decimal = "1.32.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-futures = { version = "0.2.5" }
tracing-subscriber = { version = "0.3.17", features = [
    "fmt",
    "env-filter",
    "json",
] }
utoipa = "3.5.0"
utoipa-swagger-ui = "3.1.5"
warp = "0.3.6"

[build-dependencies]
anyhow = "1.0.75"
ethers = { version = "2.0.10", features = ["abigen"] }

[dev-dependencies]
diesel = { version = "2.1.3", features = ["postgres", "r2d2", "serde_json"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
wiremock = "0.5.19"
